--- a/style/main.css
+++ b/style/main.css
@@ -304,7 +304,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: all 0.3s ease;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Quicksand', cursive;
   margin-top: 15px;
 }
 
